--- a/Text/abreviation.tex
+++ b/Text/abreviation.tex
@@ -4,4 +4,9 @@
 \acro{SVM}{Support Vector Machines}
 \acro{UAT}{Univesity Administrative Tools}
 \acro{CHAID}{Chi-square Automatic Interaction Detector}
+\acro{UNAF}{Union Nationale des Associations Familiales}
+\acro{RDC}{République Démocratique du Congo}
+\acro{ULPGL}{Université Libre des Pays des Grands Lacs}
+\acro{INAPS}{INapte A Poursuivre les études Supérieurs}
+\acro{RIP}{Reconnu d'Intérêt Pédagogique}
 \end{acronym}
