--- a/bib/litterature.bib
+++ b/bib/litterature.bib
@@ -104,7 +104,7 @@ pages      =  {10},
 	author = { RITHME Consulting },
 	title = {Méthodologie de mise en place du processus de data mining},
 	year = 2017,
-	url = {http://www.rithme.eu/?m=resources&p=dmmethod&lang=fr},
+	url = {http://www.rithme.eu/?m=resources\&p=dmmethod\&lang=fr},
 	urldate = {2017-04-29}
 }
 
@@ -129,8 +129,6 @@ pages      =  {10},
 	year={2010},
 	school={Universit{\'e} de Batna 2}
 }
-
-
 @online{differenceMLDMStack,
 	author = {Gongsun L.},
 	editor = {StackExchange},
@@ -138,4 +136,46 @@ pages      =  {10},
 	date = {12-04-2013},
 	url = {\url{https://stats.stackexchange.com/questions/5026/what-is-the-difference-between-data-mining-statistics-machine-learning-and-ai}},
 	note = {Answer To StackExchange Question},
+}
+@book{Orbk1,
+	author    =  {Laure J.  },
+	title      =  {Guide Pratique  Parents },
+	year        =  { 2015},
+	location={Paris},
+	pages      =  {10},
+}
+@book{OrBk2,
+	author    = { Bruno Racine. et al s },
+	title      =  {Rapport  haut conseil d’éducation  },
+	year        =  { 2008},
+	publisher={inédit },
+	location={Paris},
+}
+@book{OrBk3,
+	author    = { ANNIE TARDIF},
+	title      =  {L’orientation scolaire et professionnelle pour la réussite des élèves handicapés ou en difficulté},
+	year        =  { 2008},
+	publisher={inédit},
+	location={Québec},
+}
+@book{OrBk4,
+	author    = { J. Guichard et M. Huteau},
+	title      =  {Psychologie de l’orientation},
+	year        =  { 2009},
+	publisher={Dunod},
+	location={Paris},
+}
+@book{OrBk5,
+	author    = { ANDREANI, F. et LARTIQUE, P},
+	title      =  {L’Orientation des élèves},
+	year        =  { 2006},
+	publisher={A. Colin},
+	location={Paris},
+}
+@book{OrBk6,
+	author    = { DELVAUX, J.P. et BRUYNEEL, A.},
+	title      =  {L’orientation à l’entrée des universités congolaises},
+	year        =  { 1971},
+	publisher={Univ. de Kinshasa},
+	location={Kinshasa},
 }
