--- a/memoire.tex
+++ b/memoire.tex
@@ -16,17 +16,21 @@ sorting=none]{biblatex}
 \usepackage{comment}
 % acronyms and abbreviations will need to put them in a separate file
 \usepackage{acronym} 
+\usepackage{enumitem}
+\newcommand\litem[1]{\item{\bfseries #1,\enspace}}
 \bibliography{bib/litterature.bib}{}
 \addbibresource{bib/litterature.bib}\newpage\cleardoublepage
 \begin{document}
 \input{text/abreviation}\newpage\cleardoublepage
 \input{text/introduction}\newpage\cleardoublepage
 \input{text/firstChapiter}\newpage\cleardoublepage
-\input{text/RegressionLineaire.tex}\newpage\cleardoublepage	\input{text/RegressionLogistique.tex}\newpage\cleardoublepage
+\input{text/RegressionLineaire.tex}\newpage\cleardoublepage	
+\input{text/RegressionLogistique.tex}\newpage\cleardoublepage
 \input{text/NeuralNetwork.tex}\newpage\cleardoublepage
 \input{text/SupporVectorMachine.tex}\cleardoublepage
 \input{text/TreeBasedAlgorithms.tex}\cleardoublepage
 \input{text/clustering.tex}\cleardoublepage
 \input{text/Methodologie_CRISP.tex}\cleardoublepage
+\input{text/secondChapiter.tex}\cleardoublepage
 \printbibliography
 \end{document}
