finish report about data cleanning need to start report about dataexploration

--- a/Text/abreviation.tex
+++ b/Text/abreviation.tex
@@ -9,4 +9,10 @@
 \acro{ULPGL}{Université Libre des Pays des Grands Lacs}
 \acro{INAPS}{INapte A Poursuivre les études Supérieurs}
 \acro{RIP}{Reconnu d'Intérêt Pédagogique}
+\acro{UAT}{Univeristy Administrative Tool}
+\acro{CSV}{Commat Separted Values}
+\acro{SQL}{Structural Query Language}
+\acro{ANOVA}{Analyse of variance}
+\acro{EXETAT}{EXamen d'ETAT}
+\acro{DM}{Données Manquantes}
 \end{acronym}
