--- a/bib/litterature.bib
+++ b/bib/litterature.bib
@@ -179,3 +179,98 @@ pages      =  {10},
 	publisher={Univ. de Kinshasa},
 	location={Kinshasa},
 }
+
+@incollection{statBook1
+	title={Unsupervised learning},
+	author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+	booktitle={The elements of statistical learning},
+	pages={485--585},
+	year={2009},
+	publisher={Springer}
+}
+
+@article{missinValues,
+	title={Imputation des données manquantes : Comparaison de différentes approches.},
+	author={Mélanie Glasson-Cicognani & André Berchtold},
+	journal={Journées de Statistique},
+	volume={42},
+	number={III},
+	pages={301--317},
+	year={2010},
+	publisher={Swiss Society of Economics and Statistics (SSES)}
+}
+
+@book{bookSckit-Learn,
+	author={Aurélien Géron},
+	title={Hands-On Machine Learning with Scikit-Learn and TensorFlow},
+	year={March 2017},
+	publisher={O’Reilly Media, Inc.},
+	city={1005 Gravenstein Highway North, Sebastopol, CA 95472}
+}
+
+@article{breiman2001random,
+	title={Random forests},
+	author={Breiman, Leo},
+	journal={Machine learning},
+	volume={45},
+	number={1},
+	pages={5--32},
+	year={2001},
+	publisher={Springer}
+}
+
+@article{pedregosa2011scikit,
+	title={Scikit-learn: Machine learning in Python},
+	author={Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and others},
+	journal={Journal of Machine Learning Research},
+	volume={12},
+	pages={2825--2830},
+	year={2011}
+}
+
+
+@article{amrieh2016mining,
+	title={Mining Educational Data to Predict Student's academic Performance using Ensemble Methods},
+	author={Amrieh, Elaf Abu and Hamtini, Thair and Aljarah, Ibrahim},
+	journal={International Journal of Database Theory and Application},
+	volume={9},
+	number={8},
+	pages={119--136},
+	year={2016}
+}
+
+@phdthesis{becker2011uncertainty,
+	title={Uncertainty propagation through large nonlinear models},
+	author={Becker, William},
+	year={2011},
+	school={University of Sheffield}
+}
+
+@article{de2015statsref,
+	title={STATSREF: Statistical Analysis Handbook-a web-based statistics},
+	author={de Smith, MJ},
+	year={2015}
+}
+@online{DataExpAV,
+	author = { SUNIL RAY},
+	title = {Guide to Data Exploration},
+	year = 2016,
+	url = {https://www.analyticsvidhya.com/blog/2016/01/guide-data-exploration},
+	urldate = {2017-05-27}
+}
+@book{MissinVal,
+	author={Little R.J.A., Rubin D.B. },
+	title={Statistical Analysis
+	with Missing Data},
+	year={1987},
+	publisher={John Wiley},
+	city={New York}
+}
+@online{LevStack,
+	author = {NIlesh Sh.},
+	editor = {Stack Exchange},
+	title = {Fuzzy Group By, Grouping Similar Words},
+	date = {12-07-2012},
+	url={https://stackoverflow.com/questions/11535483/fuzzy-group-by-grouping-similar-words},
+	note = {Answer To StackOverflow question },
+}
