finished with univariate analysis report for categorical attributes need to start report of bivariate anlysiis

--- a/text/DataExplorationDraft1.tex
+++ b/text/DataExplorationDraft1.tex
@@ -965,16 +965,11 @@ attribues nouvellement nettoyer
         
     \subparagraph{Attribue SCHOOLSTATUS}\label{attribue-schoolstatus}
 
-    \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{DataExplorationDraft1_files/DataExplorationDraft1_142_0.png}
-    \end{center}
-    { \hspace*{\fill} \\}
-    
     Dans cette figure nous pouvons remarquer aisement que 29\% des étudiants
 proviennent des écoles dites protestantes , 27\% viennent des écoles
 catholiques , 11\% des écoles privé , 15 des écoles publiques mais aussi
 il ya des étudiants venant des autodidactes , ceux provenant des écoles
-musulmanes et kibanguistes mais en proportion vraiment negligeable
+musulmanes et kibanguistes mais en proportion vraiment négligeable
 
     \subparagraph{Attribue OPTIONRIGHT}\label{attribue-optionright}
 
@@ -1069,7 +1064,7 @@ See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stabl
     \end{center}
     { \hspace*{\fill} \\}
     
-    Dans ce tableau nous remarquons la distribution des valeurs pour
+     Nous remarquons la distribution des valeurs pour
 l'attribue faculté des étudiants: - FSGEG: 32,8\% - FSTA : 19,153\% - FD
 :19\% - FSDC :16\% - FM : 5\% - FPSE : 4\% - FT :3\%
 
