finish bivariate analysis need to add correction and send report to the director

--- a/text/DataExplorationDraft1.tex
+++ b/text/DataExplorationDraft1.tex
@@ -1074,8 +1074,8 @@ l'attribue faculté des étudiants: - FSGEG: 32,8\% - FSTA : 19,153\% - FD
 
     Dans cette partie nous allons nous allons effectué une analyse bivariée
 entre les attribues en entrée et les attribues en sortie , pour une
-premiere approche nous allons faire une analyse entre la faculté choisie
-et les differentes variables d'entres de notre ensemble d'apprentissage
+première approche nous allons faire une analyse entre la faculté choisie
+et les différentes variables d'entres de notre ensemble d'apprentissage
 dans la seconde approche nous essayerons de le faire la meme chose pour
 le autres variables de sortie. voici le differentes combinaisons que
 nous allons effectuer: 1. FAC-Diplome Province : Pour voir la relation
@@ -1418,13 +1418,13 @@ moin des hommes que des femmes
 
     FACULTE - DIPLOME AGE et FACULTE DIPLOME POURCENTAGE
 
-    comme ces une des colones dispose des variables continues nous allons
-utiliser le test ANOVA
+    comme ces une des colonnes dispose des variables continues nous allons
+utiliser le test A-NOVA
 
-    ce test nous permmetra de savoir si la noyennne de l'age des étudiants
-est la meme pour chaque faculté: cela consituera notre hypothèse nulle
-,on va cherche la probabilité p est on decidera sur base de cette valeur
-! si elle es inferieur à 0.05 on rejetera l'hypothèse nulle
+    ce test nous permettra de savoir si la moyenne de l'age des étudiants
+est la même pour chaque faculté: cela constituera notre hypothèse nulle
+,on va cherche la probabilité p est on décidera sur base de cette valeur
+! si elle es inférieur à 0.05 on rejettera l'hypothèse nulle
 
             \begin{Verbatim}[commandchars=\\\{\}]
 {\color{outcolor}Out[{\color{outcolor}314}]:}               df        sum\_sq      mean\_sq           F         PR(>F)
